project_01 : background color changer

--- a/project_01.html
+++ b/project_01.html
@@ -3,68 +3,7 @@
 
 <head>
     <title>Project 1</title>
-    <style>
-        body {
-            margin: 0;
-            background-color: #089da1;
-        }
-
-        .color {
-            margin: 100px 80px 80px 280px;
-            padding: 20px 20px 20px 20px;
-            height: 400px;
-            width: 600px;
-            box-sizing: border-box;
-            border-radius: 20px;
-            border-color: 2px solid black;
-            box-shadow: 20 20px 20px grey;
-            background-color: white;
-            justify-content: center;
-            text-align: center;
-            overflow: hidden;
-            text-wrap: cover;
-        }
-
-        .color h2 {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: white;
-            color: black;
-            padding: auto;
-        }
-
-        .color .container {
-            padding: 15px;
-            display: flex;
-            background-color: white;
-            flex-direction: row;
-            box-sizing: border-box;
-            text-align: center;
-        }
-
-        .color .container .box {
-            height: 80px;
-            width: 120px;
-            border: 0.8px solid black;
-            background-color: white;
-            box-shadow: 10px 10px 10px solid grey;
-            text-align: center;
-            font-weight: 500;
-            gap: 5px;
-        }
-
-        .color .container .box:hover {
-            cursor: pointer;
-        }
-
-        .color .para {
-            background-color: white;
-            padding: 20px;
-            font-size: 1.2em;
-            font-weight: bold;
-            color: black;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="project_01.css"></link>
 </head>
 
 <body>
