project_03 : Today's date and time

--- a/project_03.html
+++ b/project_03.html
@@ -2,32 +2,7 @@
 <html>
     <head>
         <title>Project 3</title>
-        <style>
-            *{
-                margin:0;
-                padding:0;
-                box-sizing: border-box;
-                background-color: rgb(9, 160, 236);
-            }
-            .container{
-                margin: 10px 50px 50px 330px;
-                box-sizing: border-box;
-                height:400px;
-                width:600px;
-                border-radius: 20px;
-                justify-content: center;
-                text-align: center;
-                display: flex;
-                flex-direction:column;
-            }
-            .container .content{
-                padding: 20px;
-                border-radius: 20px;
-                box-sizing: border-box;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-                line-height:normal;
-            }
-        </style>
+        <link rel="stylesheet" href="project_03.css"></link>
     </head>
     <body>
         <div class="container">
@@ -37,15 +12,6 @@
             </div>
         </div>
     </body>
-    <script>
-        const clock = document.getElementById('clock');
-       
-        setInterval(function(){
-            // second method to solve it 
-            let date = new Date();
-            console.log(date.toLocaleString());
-            clock.innerHTML=date.toLocaleString();
-
-        },1000)
+    <script src="project_03.js">
     </script>
 </html>
